src/styles/main.scss
@import url('https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,700;1,700&family=Jost:wght@400;500&display=swap');

$green: #27300f;
$orange: #d26a22;
$dark-orange: #cf5c0d;
$white: #fff;

$font-jost: 'Jost', sans-serif;
$font-cormorant: 'Cormorant', serif;

$r_minmob: 320px;
$r_mob_360: 360px;
$r_mob_400: 400px;
$r_mob_500: 500px;
$r_tab: 768px;
$r_tab_900: 900px;
$r_desk: 1000px;
$r_desk_1120: 1120px;
$r_desk_hd: 1200px;
$r_desk_1280: 1280px;
$r_desk_1350: 1350px;
$r_desc_full: 1750px;

html {
  box-sizing: border-box;
  position: relative;
  font-size: 10px;

  @media(max-width: $r_mob_500) {
    font-size: 8px;
  }
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body {
  font-size: 1.6rem;
  font-family: $font-jost;
  color: $green;
  background-image: url(../images/background.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  overflow-anchor: none;
}

img, svg {
  max-width: 100%;
  height: auto;
}

a {
  color: inherit;
  text-decoration: none;
}

h1,
h2,
h3,
p,
figure,
fieldset,
blockquote {
  margin: 0;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  clip: rect(0 0 0 0);
}

.list-reset {
  list-style: none;
  padding: 0;
  margin: 0;
}

.btn-reset {
  border: none;
  padding: 0;
  background-color: transparent;
  cursor: pointer;
}

.container {
  margin: 0 auto;
  padding-left: 15px;
  padding-right: 15px;
  max-width: 1470px;

  @media(max-width: $r_tab) {
    max-width: 600px;
  }
}

.title {
  font-family: $font-cormorant;
  font-weight: 700;
  font-size: 8rem;
  line-height: 1;

  @media(max-width: $r_desk_1280) {
    font-size: 7rem;
  }

  @media(max-width: $r_desk_1120) {
    font-size: 6rem;
  }

  @media(max-width: $r_tab) {
    text-align: center;
  }

  @media(max-width: $r_mob_360) {
    font-size: 3.8rem;
  }

  &__span {
    font-style: italic;
  }

  &_block {
    .title__span {
      display: block;
    }
  }
}

.description {
  line-height: 1.5;

  @media(max-width: $r_tab) {
    text-align: center;
  }

  &_size_s {
    font-size: 1.8rem;

    @media(max-width: $r_desk_1280) {
      font-size: 1.6rem;
    }

    @media(max-width: $r_mob_360) {
      font-size: 1.5rem;
    }
  }

  &_size_m {
    font-size: 2.4rem;

    @media(max-width: $r_desk_1280) {
      font-size: 2.2rem;
    }

    @media(max-width: $r_mob_360) {
      font-size: 1.6rem;
    }
  }
}

.link {
  border-radius: 3.2rem;
  letter-spacing: 0.14rem;
  color: $white;
  background-color: $orange;
  box-shadow: 0 1rem 1.1rem .2rem rgba(207, 92, 13, 0.2);
  text-transform: uppercase;
  transition: background-color 0.3s ease-in-out;

  @media(max-width: $r_desk_1280) {
    font-size: 1.4rem;
  }

  &_small {
    font-size: 1.4rem;
  }

  &:hover {
    background-color: $dark-orange;
  }
}

.border-block {
  border: 1px solid rgba($green, 0.4);
  border-radius: 2rem;
  transition: box-shadow 0.3s ease-in-out;

  &:hover {
    box-shadow: 0 0 0 2px rgba($green, .4) inset;
  }
}

.slider {
  overflow: hidden;
  padding-top: 7.5rem;

  @media(max-width: $r_tab) {
    padding-top: 0;
    padding-bottom: 6rem;
  }

  .swiper {
    overflow: initial;

    &-wrapper {
      box-sizing: border-box;
    }

    &-pagination {
      display: none;
  
      @media(max-width: $r_tab) {
        display: block;
      }
    }
  
    &-button-next,
    &-button-prev {
      top: -60px;
  
      @media(max-width: $r_tab) {
        display: none;
      }
  
      &::after {
        font-size: 2rem;
        color: rgba($green, 0.4);
      }
  
      &:hover {
        &::after {
          color: rgba($green, 1);
        }
      }
    }
  
    &-button-prev {
      right: 73px;
      left: initial;
    }

    &-button-next {
      right: -8px;
    }
  }

  .swiper-horizontal>.swiper-pagination-bullets {
    bottom: -50px;
    display: flex;
    align-items: center;
    justify-content: center;
  }

  .swiper-pagination-bullet {
    width: 8px;
    height: 8px;
  }
  
  .swiper-pagination-bullet-active {
    background: $orange;
    transform: scale(1.2);
  }
}

.counter {
  display: flex;

  &__btn {
    border: 1px solid $green;
    border-radius: 100%;
    width: 50px;
    height: 50px;
    background-position: center;
    background-repeat: no-repeat;
  }

  &__minus {
    background-image: url(../images/minus-counter.svg);
    background-size: 25px 25px;
    opacity: 0.4;
    pointer-events: none;
  }

  &__plus {
    background-image: url(../images/plus-counter.svg);
    background-size: 25px 25px;
  }

  &__input {
    border: none;
    padding: 0;
    width: 46px;
    font-size: 2.4rem;
    text-align: center;
  }

  &_small {
    .counter__btn {
      width: 40px;
      height: 40px;
    }

    .counter__input {
      width: 32px;
    }
  }
}
/* ... */

